crud event et invitation